--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,body{
     width: 100%;
 }
 #body{
-    position: relative;
+    /* position: relative; */
     /* border: 1px solid red; */
     background-color: #d7dbdd;
     display: flex;
@@ -27,16 +27,16 @@ nav{
     background-color: #00b19d;
     /* border: 1px solid red; */
     width: 100%;
-    top: 10rem;
+   
 }
 #main{ 
     position: relative;
     
     display: flex;
     flex-direction: row;
-    height: calc(100%-4rem);
+    height: 94vh;
     width: 100%;
-    border: 1px solid red
+    /* border: 1px solid red */
 }
 main{
 
@@ -50,12 +50,14 @@ main{
 
 
 #search{
+    position: relative;
+    padding: 1rem;
     display: flex;
     flex-direction: row;
     /* margin: 2% ; */
     height: 3rem;
     width: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 #lupita{
     position: relative;
@@ -75,15 +77,17 @@ main{
     background-color: #90d6ce;
 }
 #input{
+    position: relative;
     border: 1px solid #00b19d;
     border-radius: 0.2rem;
     height: 3rem;
-    width: 50%; 
+    width: 40%; 
     color: #979797;
     font-size: larger;
     /* border: 1px solid red; */
 }
 #butonew{
+    position: relative;
     margin-left: 5px;
     height: 3rem;
     width: 8%; 
@@ -101,10 +105,11 @@ main{
     background-color: #69c9be;
 }
 #articles{
+    position: relative;
     overflow-y: scroll;
     display: flex;   
     flex-wrap: wrap;
-    /* margin: 1rem; */
+    margin: 1rem;
     height: 100%;
     width: 95%;
     justify-content: center;
@@ -113,15 +118,16 @@ main{
     
 }
 #article{
+    position: relative;
     background-color: white;
     display: flex;
     flex-flow:column ;
     
-     margin: 30px;
+     margin: 1rem;
     /* margin-right: 4rem; */
     /* margin-left: 4vh;  */
-    height: 350px;
-    width: 230px;
+    height: 20rem;
+    width: 15rem;
     -webkit-box-shadow: 1px 1px 3px 1px #356e6e;
     box-shadow: 1px 1px 3px 1px #1e4e44;
     transition: ease-in-out 200ms;
@@ -132,7 +138,7 @@ main{
 }
 
 #index{
-
+    position: relative;
     display: flex;
     flex-flow: column;
     height: 100%;
@@ -174,10 +180,10 @@ main{
 footer{
     display: flex;
     flex-flow: column;
-    position: relative;  
+    position: absolute;  
     bottom: 0;
     background-color: #f5f5f5;
-  
+    width: 100% ;
     justify-content: center;
     align-items: center;
     /* border: 2px solid rgb(199, 180, 11); */
@@ -193,7 +199,7 @@ footer{
     text-align:justify;
    
     background-color: rgb(53, 185, 146);
-    
+    width: 100%;
     border-radius: 3px;
     }
 #buttonsale{
@@ -229,7 +235,7 @@ background-color: lightgreen;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 1.7rem;
     color: white;
-   
+   width: 100%;
     line-height: 5vh;
   
    
@@ -252,4 +258,14 @@ background-color: lightgreen;
 }
 .carticles:hover{
     transform: scale(1.05);
+}
+
+@media (max-width: 400px) {
+    #index{
+        display: none;
+    }
+    #car{
+        display: none;
+    }
+    
 }
