--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html,body{
 #body{
     /* position: relative; */
     /* border: 1px solid red; */
-    background-color: #d7dbdd;
+    background-color: #5d7b8a;
     display: flex;
     flex-flow:column;
     height: 100%;
@@ -35,7 +35,7 @@ nav{
     
     display: flex;
     flex-direction: row;
-    height: 94vh;
+    height: calc(100vh - 4rem);
     width: 100%;
     /* border: 1px solid red */
 }
@@ -112,7 +112,7 @@ main{
     flex-wrap: wrap;
     padding: 1rem;
     margin: 1rem;
-    height: 100%;
+    height: calc(100%-3rem);
     width: 95%;
     justify-content: center;
     /* border: 1px solid red; */
@@ -133,7 +133,7 @@ main{
     -webkit-box-shadow: 1px 1px 3px 1px #356e6e;
     box-shadow: 1px 1px 3px 1px #1e4e44;
     transition: ease-in-out 200ms;
-    display: none;
+   
 }
 #article:hover{
 
