--- a/style.css
+++ b/style.css
@@ -7,19 +7,19 @@
 html,body{
     margin: 0;
     /* overflow: hidden; */
-    /* position: relative; */
+    position: relative;
     height: 100%;
     width: 100%;
 }
 #body{
-    /* position: relative; */
+    position: relative;
     /* border: 1px solid red; */
     background-color: #5d7b8a;
     display: flex;
     flex-flow:column;
     height: 100%;
     width: 100%;
-    position: relative;
+   
 }
 
 nav{
@@ -35,7 +35,7 @@ nav{
     
     display: flex;
     flex-direction: row;
-    height: calc(100vh - 4rem);
+    height: calc(100% - 4rem);
     width: 100%;
     /* border: 1px solid red */
 }
