--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
    /* border: 1px solid red;  */
 }
 
-html,body{
+html, body{
     margin: 0;
     /* overflow: hidden; */
-    position: relative;
+    /* position: relative; */
     height: 100%;
     width: 100%;
 }
 #body{
-    position: relative;
+    /* position: relative; */
     /* border: 1px solid red; */
-    background-color: #5d7b8a;
+    background-color: #c0c7ca;
     display: flex;
     flex-flow:column;
     height: 100%;
@@ -23,7 +23,7 @@ html,body{
 }
 
 nav{
-    
+    position: relative;
     height: 4rem;
     background-color: #00b19d;
     /* border: 1px solid red; */
@@ -110,13 +110,13 @@ main{
     overflow-y: scroll;
     display: flex;   
     flex-wrap: wrap;
-    padding: 1rem;
-    margin: 1rem;
+    padding: 2rem;
+    margin: 2rem;
     height: calc(100%-3rem);
     width: 95%;
     justify-content: center;
     /* border: 1px solid red; */
-    transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+    /* transition: cubic-bezier(0.645, 0.045, 0.355, 1); */
     
 }
 #article{
@@ -187,6 +187,7 @@ footer{
     bottom: 0;
     background-color: #f5f5f5;
     width: 100% ;
+    height: 10%;
     justify-content: center;
     align-items: center;
     /* border: 2px solid rgb(199, 180, 11); */
@@ -199,25 +200,26 @@ footer{
     font-size: 1.7rem;
     color: white;
     
-    text-align:justify;
-   
+    height: 40%;
+   position: relative;
     background-color: rgb(53, 185, 146);
-    width: 100%;
+    width: 97%;
     border-radius: 3px;
     }
-#buttonsale{
+#sale span{
+        position: relative;
+        right: 0;
+      width: 40%;
+        border: 1px solid rgb(14, 12, 12);
+}
+#butonsale{
+    position: relative;
+    left: 3rem;
+    
+    border: 1px solid red;
+}
 
 
-
-}
-#buttonsale:hover{
-    transform: scale(1.01);
-    background-color:rgb(56, 196, 142) ;
-}
-#buttonsale:active{
-    background-color: rgb(93, 211, 162);
-    transform: scale(0.99);
-}
 
 
 
@@ -238,8 +240,11 @@ background-color: lightgreen;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 1.7rem;
     color: white;
-   width: 100%;
-    line-height: 5vh;
+    width: 100%;
+    height: 50%;
+    position: relative;
+    bottom: -4%;
+    line-height: 100%;
   
    
     background-color: rgb(108, 167, 223);
@@ -263,7 +268,8 @@ background-color: lightgreen;
     transform: scale(1.05);
 }
 
-/* @media (max-width: 400px) {
+
+@media (max-width: 400px) {
     #index{
         display: none;
     }
@@ -271,4 +277,4 @@ background-color: lightgreen;
         display: none;
     }
     
-} */
+}
