--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body{
 #body{
     /* position: relative; */
     /* border: 1px solid red; */
-    background-color: #c0c7ca;
+    background-color: #bed6e0;
     display: flex;
     flex-flow:column;
     height: 100%;
@@ -37,7 +37,7 @@ nav{
     flex-direction: row;
     height: calc(100% - 4rem);
     width: 100%;
-    border: 1px solid rgb(27, 21, 21)
+    /* border: 1px solid rgb(27, 21, 21) */
 }
 main{
 
@@ -47,7 +47,7 @@ main{
     flex: 1;
     height: 100%;
     
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 
@@ -86,6 +86,7 @@ main{
     width: 40%; 
     color: #979797;
     font-size: larger;
+   
     /* border: 1px solid red; */
 }
 #butonew{
@@ -169,7 +170,7 @@ main{
     flex-flow: column;
     flex: 0.4 ;
     height: 100%;
-    background-color: white ;
+    background-color: rgb(236, 236, 236) ;
     
 }
 #tiside{
@@ -181,6 +182,29 @@ main{
     color: white;
     background-color: rgb(143, 175, 218);
 }
+#factura{
+    display: flex;
+    flex-wrap: wrap;
+    color: #838282;
+    width: 100%;
+}
+.itemfactura{
+    margin: 2%;
+    display: flex;
+    flex-flow: column;
+    position: relative;
+    width: 40%;
+    /* border: 1px solid red */
+}
+.itemfactura .input{
+    border: none;
+    border-bottom: 1px solid rgb(141, 140, 140);
+    background-color:transparent;
+    color: #888787;
+   
+    margin: 1%;
+    margin-top: 5%;
+}
 footer{
     display: flex;
     flex-flow: column;
@@ -188,7 +212,7 @@ footer{
     bottom: 0;
     background-color: #f5f5f5;
     width: 100% ;
-    height: 10%;
+    height: 12%;
     justify-content: center;
     align-items: center;
     /* border: 2px solid rgb(199, 180, 11); */
@@ -207,7 +231,7 @@ footer{
     width: 97%;
     border-radius: 3px;
     }
-#sale span{
+#price{
         position: relative;
         right: 0;
       width: 40%;
